Remove vm display
