# api/swagger/swagger.yaml
@@ -111,31 +111,6 @@ paths:
           description: Array of links left
           schema:
             type: string
-  /vmhosts:
-    x-swagger-router-controller: vmhosts
-    get:
-      description: Return all the vmm hosts and vm hosts
-      operationId: getVmHosts
-      responses:
-        200:
-          description: Return all the vmm hosts and vm hosts
-          schema:
-            $ref: "#/definitions/VmHosts"
-  /vmhosts/{location}:
-    x-swagger-router-controller: vmhosts
-    get:
-      description: To Return all the vmm hosts and vm hosts belongs to the location
-      operationId: getVmHosts
-      parameters:
-        - name: location
-          required: true
-          type: string
-          in: path
-      responses:
-        200:
-          description: Return all the vmm hosts and vm hosts belongs to the location
-          schema:
-            $ref: "#/definitions/VmHosts"
   /vm_counter:
     x-swagger-router-controller: vmhosts
     get:
@@ -154,22 +129,6 @@ paths:
           description: Success
           schema:
             type: string
-  /vm_search:
-    x-swagger-router-controller: vmhosts
-    get:
-      description: Return all the vmm hosts and vm hosts that matched by the word
-      operationId: search
-      parameters:
-        - name: q
-          in: query
-          description: The word that would like to search
-          required: true
-          type: string
-      responses:
-        default:
-          description: Return all the vmm hosts and vm hosts that matched by the word
-          schema:
-            $ref: "#/definitions/VmHosts"
   /benchs:
     x-swagger-router-controller: benchs
     get:
@@ -271,32 +230,6 @@ definitions:
       - message
     properties:
       message:
-        type: string
-  VmHosts:
-    required:
-      - ip
-      - hostname
-      - domain
-    properties:
-      ip:
-        type: string
-      hostname:
-        type: string
-      domain:
-        type: array
-        items:
-          $ref: "#/definitions/Guest"
-  Guest:
-    properties:
-      uuid:
-        type: string
-      hostname:
-        type: string
-      mac:
-        type: string
-      ip:
-        type: string
-      domain:
         type: string
   Benchs:
     properties:
